[package]
name = "fs_rollback"
version = "1.0.3"
repository = "https://github.com/tsenovilla/fs_rollback"
license = "GPL-3.0"
rust-version = "1.84.0"
edition = "2021"
description = "This crate offers a rollback mechanism in Rust fs common operations"
documentation = "https://docs.rs/fs_rollback"

[dependencies]
tempfile = "3.16.0"
thiserror = "2.0.11"
rustilities = { version = "1.0.0", features=["paths"] }

[features]
## Integration test are isolated thanks to this feature. They must run in a single test thread as some of them
## modify env variables, leading to cross-test race conditions if executed concurrently
integration-tests = []
