[package]
name = "fs_rollback"
version = "3.0.1"
repository = "https://github.com/tsenovilla/fs_rollback"
license = "GPL-3.0"
rust-version = "1.84.0"
edition = "2021"
description = "This crate offers a rollback mechanism in Rust for fs common operations"
documentation = "https://docs.rs/fs_rollback"

[dependencies]
tempfile = "3.16.0"
thiserror = "2.0.11"
rustilities = { version = "2.2.0", features=["paths"] }
same-file = "1.0.6"

[features]
## Integration test are isolated thanks to this feature. They must run in a single test thread as some of them
## modify env variables, leading to cross-test race conditions if executed concurrently
integration-tests = []
